Delete folders bureau*

--- a/Client/Dockerfile
+++ b/Client/Dockerfile
@@ -10,14 +10,14 @@ WORKDIR /appClient
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
-COPY package*.json ./
+COPY package*.json /appClient
 
 RUN npm install
 # If you are building your code for production
 # RUN npm install --only=production
 
 # Bundle app source
-COPY . .
+COPY . /appClient
 
 EXPOSE 80
 CMD [ "npm", "start" ]
