rewrite lavels in dockerfiles and docker compose

--- a/Client/Dockerfile
+++ b/Client/Dockerfile
@@ -5,19 +5,19 @@ FROM node:8
 RUN apt-get update
 
 # Create app directory
-WORKDIR /appClient
+WORKDIR /app_client
 
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
-COPY package*.json /appClient
+COPY package*.json /app_client
 
 RUN npm install
 # If you are building your code for production
 # RUN npm install --only=production
 
 # Bundle app source
-COPY . /appClient
+COPY . /app_client
 
 EXPOSE 80
 CMD [ "npm", "start" ]
