--- a/Ocr/Dockerfile
+++ b/Ocr/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update
 
 # install other dependances
 RUN apt-get install tesseract-ocr -y
-RUN apt-get install python3
+RUN apt-get install python3 -y
 RUN apt-get install python3-pip -y
 
 # Set the working directory to /app
