add dependances in dockerfiles

--- a/Ocr/Dockerfile
+++ b/Ocr/Dockerfile
@@ -8,8 +8,12 @@ RUN apt-get update
 RUN apt-get install tesseract-ocr -y
 RUN apt-get install python3 -y
 RUN apt-get install python3-pip -y
-RUN pip3 install pytesseract
 RUN apt-get install tesseract-ocr
+RUN pip3 install pytesseract
+RUN pip3 install requests
+RUN pip3 install Flask
+RUN pip3 install flask-restful
+
 
 # Set the working directory to /app
 WORKDIR /app_ocr
