--- a/Generator/Dockerfile
+++ b/Generator/Dockerfile
@@ -7,12 +7,13 @@ RUN apt-get update
 # Install other dependances
 RUN apt-get install python3 -y
 RUN apt-get install python3-pip -y
+RUN apt-get install xvfb -y
 RUN apt-get install wkhtmltopdf -y
 RUN pip3 install imgkit -y
 RUN pip3 install jinja2 -y
-RUN pip3 install requests
-RUN pip3 install Flask
-RUN pip3 install flask-restful
+RUN pip3 install requests -y
+RUN pip3 install Flask -y
+RUN pip3 install flask-restful -y
 
 
 # Set the working directory to /app
