--- a/Ocr/Dockerfile
+++ b/Ocr/Dockerfile
@@ -9,10 +9,10 @@ RUN apt-get install tesseract-ocr -y
 RUN apt-get install python3 -y
 RUN apt-get install python3-pip -y
 RUN apt-get install tesseract-ocr -y
-RUN pip3 install pytesseract -y
-RUN pip3 install requests -y
-RUN pip3 install Flask -y
-RUN pip3 install flask-restful -y
+RUN pip3 install pytesseract 
+RUN pip3 install requests 
+RUN pip3 install Flask 
+RUN pip3 install flask-restful 
 
 
 # Set the working directory to /app
