--- a/fabric-dev-servers/Dockerfile
+++ b/fabric-dev-servers/Dockerfile
@@ -2,11 +2,10 @@ FROM ubuntu:18.04
 
 RUN apt-get update
 
-RUN apt-get install python3 -y
-RUN apt-get install python3-pip -y
 RUN apt-get install curl -y
-RUN apt-get install nodejs -y
-RUN apt-get install npm -y
+RUN apt update
+RUN apt install nodejs -y
+RUN apt install npm -y
 RUN curl -O https://hyperledger.github.io/composer/latest/prereqs-ubuntu.sh
 RUN chmod u+x prereqs-ubuntu.sh
 RUN npm install -g composer-cli@0.20
