--- a/fabric-dev-servers/Dockerfile
+++ b/fabric-dev-servers/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:18.04
 RUN apt-get update
 
 RUN apt-get install curl -y
-RUN curl -sL https://deb.nodesource.com/setup_10.x | sudo bash -
+RUN curl -sL https://deb.nodesource.com/setup_10.x | bash -
 RUN apt-get install nodejs -y
 RUN apt-get install npm -y
 RUN curl -O https://hyperledger.github.io/composer/latest/prereqs-ubuntu.sh
