--- a/fabric-dev-servers/Dockerfile
+++ b/fabric-dev-servers/Dockerfile
@@ -3,9 +3,9 @@ FROM ubuntu:18.04
 RUN apt-get update
 
 RUN apt-get install curl -y
-RUN curl -sL https://deb.nodesource.com/setup_10.x | bash -
 RUN apt-get install nodejs -y
 RUN apt-get install npm -y
+RUN npm install -g npm@latest
 RUN curl -O https://hyperledger.github.io/composer/latest/prereqs-ubuntu.sh
 RUN chmod u+x prereqs-ubuntu.sh
 RUN npm install -g composer-cli@0.20
