--- a/fabric-dev-servers/Dockerfile
+++ b/fabric-dev-servers/Dockerfile
@@ -3,10 +3,11 @@ FROM ubuntu:18.04
 RUN apt-get update
 
 RUN apt-get install curl -y
-RUN curl -O https://hyperledger.github.io/composer/latest/prereqs-ubuntu.sh
-RUN chmod u+x prereqs-ubuntu.sh
-RUN sed -i -e 's/sudo //g' ./prereqs-ubuntu.sh
-RUN ./prereqs-ubuntu.sh
+RUN curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.0/install.sh | bash
+RUN touch .bash_profile
+RUN curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.0/install.sh | bash
+RUN nvm install v8
+RUN nvm use 8
 RUN npm install -g composer-cli@0.20
 RUN npm install -g composer-rest-server@0.20
 RUN npm install -g generator-hyperledger-composer@0.20
