--- a/fabric-dev-servers/Dockerfile
+++ b/fabric-dev-servers/Dockerfile
@@ -6,6 +6,8 @@ RUN apt-get install curl -y
 RUN curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.0/install.sh | bash
 RUN nvm install v8
 RUN nvm use 8
+RUN sudo apt-get install npm
+RUN npm install npm@latest
 RUN npm install -g composer-cli@0.20
 RUN npm install -g composer-rest-server@0.20
 RUN npm install -g generator-hyperledger-composer@0.20
