--- a/fabric-dev-servers/Dockerfile
+++ b/fabric-dev-servers/Dockerfile
@@ -3,11 +3,10 @@ FROM ubuntu:18.04
 RUN apt-get update
 
 RUN apt-get install curl -y
-RUN curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.0/install.sh | bash
-RUN nvm install v8
+RUN curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.2/install.sh | bash
+RUN export NVM_DIR="${HOME}/.nvm"[ -s "${NVM_DIR}/nvm.sh" ] && . "${NVM_DIR}/nvm.sh"[ -s "${NVM_DIR}/bash_completion" ] && . "${NVM_DIR}/bash_completion"
+RUN nvm install 8
 RUN nvm use 8
-RUN sudo apt-get install npm
-RUN npm install npm@latest
 RUN npm install -g composer-cli@0.20
 RUN npm install -g composer-rest-server@0.20
 RUN npm install -g generator-hyperledger-composer@0.20
