--- a/fabric-dev-servers/Dockerfile
+++ b/fabric-dev-servers/Dockerfile
@@ -1,12 +1,18 @@
 FROM ubuntu:18.04
 
+RUN rm /bin/sh && ln -s /bin/bash /bin/sh
+
 RUN apt-get update
 
 RUN apt-get install curl -y
-RUN curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.2/install.sh | bash
-RUN export NVM_DIR="${HOME}/.nvm"[ -s "${NVM_DIR}/nvm.sh" ] && . "${NVM_DIR}/nvm.sh"[ -s "${NVM_DIR}/bash_completion" ] && . "${NVM_DIR}/bash_completion"
+
+ENV NVM_DIR /usr/local/nvm
+
+RUN curl --silent -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.2/install.sh | bash
+RUN source $NVM_DIR/nvm.sh 
 RUN nvm install 8
 RUN nvm use 8
+
 RUN npm install -g composer-cli@0.20
 RUN npm install -g composer-rest-server@0.20
 RUN npm install -g generator-hyperledger-composer@0.20
